<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.note.MainActivity">
    <item
        android:id="@+id/sort"
        android:title="@string/sort" />
    <item
        android:id="@+id/filter"
        android:title="@string/filter" />
    <item
        android:id="@+id/action_empty_notes"
        android:title="@string/action_empty_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_notes"
        android:title="@string/action_export_notes" />
    <item
        android:id="@+id/action_import_notes"
        android:title="@string/action_import_notes" />
    <item
        android:id="@+id/action_language_settings"
        android:title="@string/action_language_settings" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
</menu>
